Funcionando con Menu Remoto y Cambio de valores

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,9 @@
 platform = atmelavr
 board = nanoatmega328new
 framework = arduino
-lib_deps = sandeepmistry/LoRa@^0.8.0
-upload_port = COM5
-monitor_port = COM5
+lib_deps = 
+	sandeepmistry/LoRa@^0.8.0
+	olikraus/U8g2@^2.35.9
+	easyg0ing1/SimpleEncoder@^1.1.1
+upload_port = COM6
+monitor_port = COM6
